--- a/css/list.css
+++ b/css/list.css
@@ -2,7 +2,7 @@
 html{height: 100%;}
 h1{color:#888;text-align: center;}
 body{
-    height:100%;   
+    height:100%;
     background: -webkit-linear-gradient(left top, #BBDEFB, #B0C4DE) fixed; /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(bottom right,#BBDEFB, #B0C4DE) fixed; /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(bottom right, #BBDEFB, #B0C4DE) fixed; /* For Firefox 3.6 to 15 */
@@ -12,6 +12,7 @@ body{
 
 #habit-list{list-style: none; padding:0;}
 #habit-list>li{position:relative; height: 240px;padding:5%; background:rgba(255,255,255,1); border:1px solid rgba(255, 255, 255, 0.3); border-radius:5px; margin:5px; padding:0;}
+#habit-skeleton{visibility:hidden}
 
 /* habit info */
 .habit-info{padding:0;margin-left:20px;}
