--- a/css/forms.css
+++ b/css/forms.css
@@ -95,7 +95,6 @@ h2{
 	padding-bottom: 10px;
 	border-top-right-radius: 20px;
 	border-top-left-radius: 20px;
-
 	color:white;
 	text-shadow: 0px 0px 0px black;
 }
@@ -245,9 +244,14 @@ p#alarm {
 	font-size: 15px;
 }
 
+p#notifications{
+	position: relative;
+	padding-top: 5%;
+}
+
 .myFile input[type="file"] {
 	display: block;
-	position: absolute;
+	position: relative;
 	top: 0;
 	right: 0;
 	opacity: 0;
@@ -258,7 +262,9 @@ p#alarm {
 }
 
 .onoffswitch {
-    position: relative; width: 63px;
+    position: relative; width: 63px; 
+    bottom: 36px;
+    left: 20%;
     -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
 }
 .onoffswitch-checkbox {
@@ -302,4 +308,9 @@ p#alarm {
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
     right: 0px; 
 }
+
+
+
+
+
 
