--- a/css/list.css
+++ b/css/list.css
@@ -25,14 +25,14 @@ body{
 .message-total>svg{margin: 15px auto;}
 
 /* operations (for a existing habit) */
-.habit-op{position:absolute; right:5px;display:inline-block; height: 100%; line-height: 60px;width:100%;text-align:center;top:170px;margin:0 auto;}
+.habit-op{position:absolute; left:60px;display:inline-block; height: 100%; line-height: 60px;width:100%;text-align:center;top:170px;margin:0;}
 .habit-op img{height: 90%;}
 .op{width:60px; height:60px;margin-right:5px;border-radius: 50%; box-shadow: 0 0 3px gray; padding: 5px; vertical-align: middle;}
 .op:hover{box-shadow: 0 0 5px gray;}
 .op:active{box-shadow: 0 0 10px gray;}
 .op:focus{outline-style:none;}
 
-.op-done{background:rgba(0, 177, 106, 0.8); border:2px solid rgba(0, 128, 0, 0.3);}
+.op-done{background:rgba(204, 204, 204, 204); border:2px solid rgb(102, 102, 102); pointer-events: none;}
 .op-done:hover{background:#00B16A;}
 .op-done:active{background:#00B16A; border:2px solid green;}
 
@@ -43,6 +43,48 @@ body{
 .op-del{background:rgba(242, 38, 19, 0.7); border:2px solid rgba(255,0,0,0.3);}
 .op-del:hover{background:#F22613;}
 .op-del:active{background:#F22613; border:2px solid red;}
+
+.days {
+    padding-left: 20px;
+    line-height: 70px;
+}
+
+#onSunday {
+    display: inline;
+    font-weight: normal;
+    color: gray;
+}
+#onMonday {
+    display: inline;
+    font-weight: normal;
+    color: gray;
+}
+#onTuesday {
+    display: inline;
+    font-weight: normal;
+    color: gray;
+}
+#onWednesday {
+    display: inline;
+    font-weight: normal;
+    color: gray;
+}
+#onThursday {
+    display: inline;
+    font-weight: normal;
+    color: gray;
+}
+#onFriday {
+    display: inline;
+    font-weight: normal;
+    color: gray;
+}
+#onSatrday {
+    display: inline;
+    font-weight: normal;
+    color: gray;
+}
+
 
 /* add habit */
 #addHabit{position:fixed; bottom: 40px; right:20px;background:rgba(33, 72, 100, 1.0); width: 60px;height:60px; vertical-align: middle; font-size:36px; padding: 5px;line-height: 100%;color:white; border:2px solid rgba(85,85,85,0.7); -webkit-appereance: none; border-radius: 50%; box-shadow: 0 0 3px gray;}
