--- a/css/list.css
+++ b/css/list.css
@@ -79,7 +79,7 @@ body{
     font-weight: normal;
     color: gray;
 }
-#onSatrday {
+#onSaturday {
     display: inline;
     font-weight: normal;
     color: gray;
