--- a/css/list.css
+++ b/css/list.css
@@ -1,5 +1,5 @@
 /* basic structure & layout */
-html{height: 100%;}
+/*html{height: 100%;}*/
 h1{color:#888;text-align: center;}
 body{
     height:100%;
