--- a/css/forms.css
+++ b/css/forms.css
@@ -291,7 +291,7 @@ p#notifications{
 }
 
 .myFile input[type="file"] {
-	display: block;
+	display: inline-block;
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -300,6 +300,7 @@ p#notifications{
 
 .hide {
 	display: none;
+	position: absolute;
 }
 
 .onoffswitch {
