--- a/css/list.css
+++ b/css/list.css
@@ -81,7 +81,7 @@ body{
     width: 220px;
     height: 20px;
     margin-top: 20px;
-    background-color: #737373;
+    background-color: #bebebe;
 }
 #progressBar div {
     height: 100%;
