--- a/css/list.css
+++ b/css/list.css
@@ -26,6 +26,12 @@ body{
 .message-total{visibility: visible;}
 .message-total>svg{margin: 15px auto;}
 
+
+.delete-habit{position:absolute; left:91%; top:8px; right:0px;}
+.delete-habit img{height: 100%;}
+.delete{width:30px; height:30px;margin-right:5px;border-radius: 50%; box-shadow: 0 0 3px gray; padding: 5px; vertical-align: middle;}
+
+
 /* operations (for a existing habit) */
 .habit-op{position:absolute; left:60px;display:inline-block; height: 100%; line-height: 60px;width:100%;text-align:center;top:170px;margin:0;}
 .habit-op img{height: 90%;}
@@ -46,9 +52,9 @@ body{
 .op-edit:hover{background:#F7CA18;}
 .op-edit:active{background:#F7CA18; border:2px solid yellow;}
 
-.op-del{background:rgba(242, 38, 19, 0.7); border:2px solid rgba(255,0,0,0.3);}
-.op-del:hover{background:#ff4d4d;}
-.op-del:active{background:#ff4d4d; border:2px solid red;}
+.op-del{background:rgb(255, 255, 255); border:2px solid white;}
+.op-del:hover{background:rgba(242, 38, 19, 0.7)}
+.op-del:active{background:rgba(242, 38, 19, 0.7); border:2px solid red;}
 
 .days {
     padding-left: 20px;
@@ -91,7 +97,8 @@ body{
     text-align: right;
     line-height: 22px; /* same as #progressBar height if we want text middle aligned */
     width: 0;
-    background-color: #0099ff;
+    background-color: #0099ff; 
+  
 }
 
 
