--- a/css/list.css
+++ b/css/list.css
@@ -17,7 +17,7 @@ body{
 /* habit info */
 .habit-info{padding:0;margin-left:20px;}
 .habit-info>li{list-style:none; height:100%; padding:0; margin-right:5px; vertical-align: center;}
-.habit-name{margin:0; padding:0; height:100%; display:inline-block; vertical-align: middle; line-height:60px;color:#888;font-size: 24px;}
+.habit-name{margin:0; padding:0; height:100%; display:inline-block; vertical-align: middle; line-height:60px;color:#888;font-size: 24px; white-space: nowrap;}
 .habit-icon{margin:0; border-radius:5px;width:100px; height:100px;}
 
 .message{position:absolute; display:inline-block; visibility: hidden; text-align:center; color:#888;}
