--- a/css/forms.css
+++ b/css/forms.css
@@ -308,6 +308,7 @@ p#notifications{
     margin-top: -36px;
     left: 20%;
     -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+    margin-left: 20px
 }
 .onoffswitch-checkbox {
     display: none;
