--- a/css/welcome.css
+++ b/css/welcome.css
@@ -106,6 +106,10 @@ p#list{
   -moz-border-radius: 5px; /* For Mozilla, etc. */
   border-radius: 5px; /* CSS3 Feature */
   opacity: 1.0;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -114,7 +118,10 @@ p#list{
 
 
 .welcome .addbutton:hover {
-	opacity: 0.75;
+  background-color: #98FB98;
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+	opacity: 1;
 	cursor: pointer;
 }
 
