--- a/css/forms.css
+++ b/css/forms.css
@@ -56,9 +56,7 @@ label.warning{
 	padding: 8px 35px 8px 14px;
 	margin-bottom: 20px;
 	border-radius: 4px;
-
 }
-
 img.icon{
 	display: inline-block;
 	width: 80px;
@@ -80,7 +78,6 @@ img.selectedIcon{
 	-webkit-transition: .3s ease-in-out;
 	transition: .3s ease-in-out;
 }
-
 @media (max-width: 500px) {
   div.forms {
   	position: relative;
@@ -180,26 +177,18 @@ input#save{
 	background: none;
 	border: none;
 	color: white;
-	background-color: #003366;
+	background-color: #48BA87;
 	-webkit-border-radius: 5px; /*For Safari, etc. */
 	-moz-border-radius: 5px; /* For Mozilla, etc. */
 	border-radius: 5px; /* CSS3 Feature */
-	opacity: .75;
+	opacity: 1.0;
 	font-size: medium;
-	-webkit-transform: scale(1);
-	transform: scale(1);
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
 input#save:hover{
-	background-color: #98FB98;
-	opacity: 1;
-	-webkit-transform: scale(1.3);
-	transform: scale(1.3);
 	cursor: pointer;
 }
 p#save_p{
@@ -222,8 +211,7 @@ div label input {
     margin:4px;
     border-radius:5px;
 	/*border:1px solid #D0D0D0;*/
-    background-color:#cccc99;
-    opacity: 0.5px;
+    background-color:#EFEFEF;
     float:left;
     width:4.0em;
 }
@@ -243,7 +231,7 @@ div label input {
 }
 
 #ck-button input:checked + span {
-    background-color:#4169E1;
+    background-color:#9c9696;
     border-radius:5px;
     color:#fff;
 }
@@ -258,11 +246,9 @@ div label input {
 #daily-button label {
     margin:4px;
     border-radius:25px;
-    background-color:#cccc99;
-    opacity: 0.75px;
+    background-color:#EFEFEF;
     float:left;
     width:2.0em;
-
 }
 
 span#times{
@@ -277,6 +263,7 @@ span#times{
     display:block;
     /*border:1px solid #D0D0D0;*/
     overflow:auto;
+
 }
 
 #daily-button label input {
@@ -285,7 +272,7 @@ span#times{
 }
 
 #daily-button input:checked + span {
-    background-color:#4169E1;
+    background-color:#9c9696;
     border-radius:25px;
     color:#fff;
 }
@@ -294,7 +281,7 @@ span#times{
 }
 
 .selectedIcon {
-	border: 5px solid #4169E1;
+	border: 5px solid #42A5F5;
 }
 
 .notifications1 {
@@ -386,64 +373,3 @@ ul#alarm-list {
 	padding: 0;
 	margin: 0;
 }
-
-#hr1{
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-   border-radius: 4px;
-   height: 25px;
-   background-color: #cccc99;
-   opacity: 0.75;
-}
-
-#min1{
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-   border-radius: 4px;
-   height: 25px;
-   background-color: #cccc99;
-   opacity: 0.75;
-}
-
-#am1{
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-   border-radius: 4px;
-   height: 25px;
-   background-color: #cccc99;
-   opacity: 0.75;
-}
-
-#hr1::-ms-expand { /* for IE 11 */
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-   border-radius: 4px;
-   height: 25px;
-   background-color: #cccc99;
-   opacity: 0.75;
-}
-
-#min1::-ms-expand { /* for IE 11 */
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-   border-radius: 4px;
-   height: 25px;
-   background-color: #cccc99;
-   opacity: 0.75;
-}
-
-#am1::-ms-expand { /* for IE 11 */
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-   border-radius: 4px;
-   height: 25px;
-   background-color: #cccc99;
-   opacity: 0.75;
-}
-
-
-
-
-
-
-
