--- a/css/forms.css
+++ b/css/forms.css
@@ -231,7 +231,7 @@ div label input {
 }
 
 #ck-button input:checked + span {
-    background-color:#9c9696;
+    background-color:#4169E1;
     border-radius:5px;
     color:#fff;
 }
@@ -272,7 +272,7 @@ span#times{
 }
 
 #daily-button input:checked + span {
-    background-color:#9c9696;
+    background-color:#4169E1;
     border-radius:25px;
     color:#fff;
 }
@@ -281,7 +281,7 @@ span#times{
 }
 
 .selectedIcon {
-	border: 5px solid #42A5F5;
+	border: 5px solid #4169E1;
 }
 
 .notifications1 {
