Changed color for alarm selection

--- a/css/forms.css
+++ b/css/forms.css
@@ -379,7 +379,7 @@ ul#alarm-list {
   -moz-border-radius: 4px;
    border-radius: 4px;
    height: 25px;
-   background-color: #cce5ff;
+   background-color: #e5f2ff;
    opacity: 0.75;
 }
 
@@ -388,7 +388,7 @@ ul#alarm-list {
   -moz-border-radius: 4px;
    border-radius: 4px;
    height: 25px;
-   background-color: #cce5ff;
+   background-color: #e5f2ff;
    opacity: 0.75;
 }
 
@@ -397,7 +397,7 @@ ul#alarm-list {
   -moz-border-radius: 4px;
    border-radius: 4px;
    height: 25px;
-   background-color: #cce5ff;
+   background-color: #e5f2ff;
    opacity: 0.75;
 }
 
@@ -406,7 +406,7 @@ ul#alarm-list {
   -moz-border-radius: 4px;
    border-radius: 4px;
    height: 25px;
-   background-color: #cce5ff;
+   background-color: #e5f2ff;
    opacity: 0.75;
 }
 
@@ -415,7 +415,7 @@ ul#alarm-list {
   -moz-border-radius: 4px;
    border-radius: 4px;
    height: 25px;
-   background-color: #cce5ff;
+   background-color: #e5f2ff;
    opacity: 0.75;
 }
 
@@ -424,6 +424,6 @@ ul#alarm-list {
   -moz-border-radius: 4px;
    border-radius: 4px;
    height: 25px;
-   background-color: #cce5ff;
+   background-color: #e5f2ff;
    opacity: 0.75;
 }
