--- a/css/forms.css
+++ b/css/forms.css
@@ -186,10 +186,17 @@ input#save{
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+	transition: 1s ease;
 }
 
 input#save:hover{
 	cursor: pointer;
+    background-color:#39946c;
+    -webkit-transition: all 1s ease; 
+    -webkit-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	transform: scale(1.1);
+	transition: 1s ease;
 }
 p#save_p{
 	text-align: center;
