--- a/css/welcome.css
+++ b/css/welcome.css
@@ -28,6 +28,7 @@ i  {
 	margin: 0 auto;
   top: 15%;
   width: 500px;
+
   /*
   left: 50%;
   webkit-transform: translateY(-75%);
@@ -110,11 +111,15 @@ p#list{
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   font-size: 20px;
+  transition: 1s ease;
+
 }
 
 
 .welcome .addbutton:hover {
-	opacity: 0.75;
+  transition: 1s ease;
+  background-color: #4d6c83;
 	cursor: pointer;
+
 }
 
