Added form validation to reset password page, added reset password link to login.html

--- a/css/resetPass.css
+++ b/css/resetPass.css
@@ -146,3 +146,13 @@ label.error_message{
     margin-bottom: 20px;
     border-radius: 4px;
 }
+
+label.success_message{
+    color: #b94a48;
+    background-color: #90EE90;
+    border-color: #eed3d7;
+    padding: 8px 35px 8px 14px;
+    margin-bottom: 20px;
+    border-radius: 4px;
+    opacity: 0.75;
+}
