--- a/css/login.css
+++ b/css/login.css
@@ -172,6 +172,18 @@ body {
   font-size: 0.8em;
   margin-top: 10px;
   display: none;
+  margin-bottom: 10px;
+}
+
+#forgotPassword a {
+  text-decoration: none;
+  font-size: 0.7em;
+  font-style: italic;
+  text-decoration: none;
+}
+
+#forgotPassword a:visited {
+  color: blue;
 }
 
 .inputError {
